[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/character_base.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Flip.tres" type="Animation" id=3]
[ext_resource path="res://Assets/ice_particle.png" type="Texture" id=4]
[ext_resource path="res://Assets/arrow_indicator.png" type="Texture" id=5]
[ext_resource path="res://Assets/circle_indicator.png" type="Texture" id=6]

[sub_resource type="PhysicsMaterial" id=27]
friction = 0.0
rough = true
bounce = 1.0
absorbent = true

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.99998
height = 4.00005

[sub_resource type="CircleShape2D" id=3]
radius = 5.09902

[sub_resource type="CircleShape2D" id=7]
radius = 5.0

[sub_resource type="Animation" id=12]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 144, 0, 36, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 180, 0, 36, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 36, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 36, 0, 36, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PuckArea/PuckCollider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeadArea/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 72, 0, 36, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 108, 0, 36, 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Curve" id=31]
_data = [ Vector2( 0, 0.384091 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -6.49383, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 31 )

[sub_resource type="ParticlesMaterial" id=30]
emission_shape = 1
emission_sphere_radius = 0.5
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 15.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.35
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 32 )

[sub_resource type="Animation" id=21]
resource_name = "Idling Left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PuckArea/PuckCollider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeadArea/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Idling Right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PuckArea/PuckCollider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeadArea/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001

[sub_resource type="Animation" id=23]
resource_name = "Shooting Left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PuckArea/PuckCollider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeadArea/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Shooting Right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PuckArea/PuckCollider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeadArea/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Skating Left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PuckArea/PuckCollider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeadArea/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, -6 ) ]
}

[sub_resource type="Animation" id=33]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 24, 0, 24, 24 ), Rect2( 48, 0, 24, 24 ), Rect2( 72, 0, 24, 24 ), Rect2( 96, 0, 24, 24 ), Rect2( 120, 0, 24, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Circle:region_rect")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 24, 0, 24, 24 ), Rect2( 48, 0, 24, 24 ), Rect2( 72, 0, 24, 24 ), Rect2( 96, 0, 24, 24 ), Rect2( 120, 0, 24, 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Circle:offset")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=34]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 24, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Circle:region_rect")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 24, 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Circle:offset")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 66
mode = 2
physics_material_override = SubResource( 27 )
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 2
contact_monitor = true
linear_damp = 0.85
script = ExtResource( 2 )

[node name="PuckArea" type="Area2D" parent="." groups=["puck_area"]]
position = Vector2( 2.28882e-05, -7 )
collision_layer = 16
collision_mask = 0

[node name="PuckCollider" type="CollisionShape2D" parent="PuckArea" groups=["player"]]
position = Vector2( 12, 6 )
shape = SubResource( 8 )

[node name="HeadArea" type="Area2D" parent="."]
position = Vector2( 2.28882e-05, -7 )
collision_layer = 64
collision_mask = 0

[node name="Head" type="CollisionShape2D" parent="HeadArea"]
position = Vector2( 3, -6 )
shape = SubResource( 3 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
rotation = 1.57079
scale = Vector2( -1, 1 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Charging Shot" = SubResource( 12 )
"anims/Charging Shot - Back" = SubResource( 13 )
anims/Idle = SubResource( 10 )
"anims/Idle - Back" = SubResource( 14 )
anims/RESET = SubResource( 6 )
anims/Skating = SubResource( 11 )
"anims/Skating - Back" = SubResource( 15 )

[node name="Circle" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 24 )

[node name="LineUp" type="Line2D" parent="." groups=["player"]]
width = 16.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 4 )
texture_mode = 1

[node name="LineDown" type="Line2D" parent="."]
width = 16.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 4 )
texture_mode = 1

[node name="LineShot" type="Line2D" parent="."]
width = 4.0
default_color = Color( 0.85098, 0.341176, 0.388235, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.28882e-05, -7 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 144, 0, 36, 36 )

[node name="SkatingParticles" type="Particles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 30 )
texture = ExtResource( 4 )

[node name="Flipper" type="AnimationPlayer" parent="."]
playback_process_mode = 0
"anims/Idling Left" = SubResource( 21 )
"anims/Idling Right" = SubResource( 22 )
anims/RESET = SubResource( 9 )
"anims/Shooting Left" = SubResource( 23 )
"anims/Shooting Right" = SubResource( 19 )
"anims/Skating Left" = SubResource( 20 )
"anims/Skating Right" = ExtResource( 3 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 0, -22 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 24, 0, 24, 24 )

[node name="IndicatorAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Active = SubResource( 33 )
anims/Inactive = SubResource( 34 )

[connection signal="body_entered" from="PuckArea" to="." method="_on_PuckArea_body_entered"]
